--- a/style/scss/style.scss
+++ b/style/scss/style.scss
@@ -178,7 +178,7 @@ input, textarea {
     text-align: center;
     font-family: 'Roboto Condensed', sans-serif;
     font-size: 3.38em;
-    line-height: 66px;
+    line-height: 1.22;
     b {
         position: relative;
         white-space: nowrap;
@@ -574,7 +574,7 @@ a.btn {
         margin: 0 7.5px;
         transition: 0.4s all;
         @media screen and (max-width: 1375px) {
-            opacity: 0.4;
+            opacity: 0.15;
         }
         &:last-child {
             margin-right: 15px;
@@ -604,8 +604,6 @@ a.btn {
         display: flex;
         width: 43.24%;
         margin-bottom: 35px;
-
-        flex-wrap: wrap;
         align-items: flex-start;
         &:nth-child(2n) {
             transition-delay: 0.4s;
@@ -719,6 +717,11 @@ a.btn {
             position: absolute;
             transform: scale(0);
         }
+		.swiper-slide{
+			background-repeat: no-repeat;
+			background-size: cover;
+			background-position: center;
+		}
     }
     &__left {
         display: flex;
@@ -903,11 +906,12 @@ a.btn {
     &__image {
         display: flex;
         overflow: hidden;
-
         justify-content: center;
-        img {
-            height: 241px;
-        }
+		width: 100%;
+        height: 240px;
+		background-repeat: no-repeat;
+		background-position: center;
+		background-size: cover;
     }
     &__info {
         padding: 30px;
@@ -1128,6 +1132,7 @@ a.btn {
         img {
             display: block;
             width: auto;
+			max-width: 100%;
             height: 100%;
             transition: 0.3s all;
         }
@@ -1135,17 +1140,17 @@ a.btn {
             width: 40.090%;
             a {
                 width: 445px;
+				max-width: 100%;
                 height: 445px;
             }
         }
         &:nth-child(3n+2) {
             display: flex;
             width: 31.531%;
-
             justify-content: space-between;
             flex-wrap: wrap;
             a {
-                width: 160px;
+                width: 46%;
                 height: 160px;
                 &:last-child {
                     width: 100%;
@@ -1572,6 +1577,10 @@ a.btn {
 	&__body{
 		width: 100%;
 	}
+	&__wrp{
+		display: flex;
+		align-items: center;
+	}
     .caption {
         margin-bottom: 55px;
 		display: flex;
@@ -1656,7 +1665,7 @@ a.btn {
         position: relative;
         display: flex;
         overflow: hidden;
-        width: 1110px;
+        width: 100%;
         height: 445px;
         cursor: pointer;
         background: #141720;
@@ -1825,7 +1834,7 @@ a.btn {
         position: relative;
         display: flex;
         overflow: hidden;
-        width: 540px;
+        width: 100%;
         height: 315px;
         margin-bottom: 60px;
         cursor: pointer;
@@ -2095,8 +2104,51 @@ a.btn {
 @media only screen and (max-width: 1199.5px){
 	.b-center{
 		max-width: 1000px;
+		padding-left: 30px;
+		padding-right: 30px;
 	}
 	body,html{
 		font-size: 14px;
+		min-width: 300px;
 	}
+	.audience__item{
+		max-width: 30%;
+	}
+	.reviews__col{
+		max-width: 48%;
+	}
+	.offers__item{
+		width: 100%;
+		&:not(:last-of-type){
+			margin-bottom: 50px;
+		}
+		&s{
+			flex-wrap: wrap;
+		}
+	}
+	.offers__desc{
+		min-height: 50px;
+	}
+	.caption{
+		font-size: 3em;
+	}
+	.about__left{
+		max-width: 350px;
+	}
+	.about__bottom{
+		flex-wrap: wrap;
+	}
+	.about__item{
+		max-width: 30%;
+	}
+	.objects__right,
+	.results__right{
+		margin-left: 30px;
+	}
+	.results__left{
+		max-width: 400px;
+	}
+}
+@media only screen and (max-width: 900.5px){
+
 }
