--- a/style/scss/style.scss
+++ b/style/scss/style.scss
@@ -46,7 +46,6 @@ body,html{
 section, header, footer {
     position: relative;
     width: 100%;
-    min-width: 320px;
     margin: 0 auto;
 }
 
@@ -64,7 +63,6 @@ input, textarea {
 
 .b-center {
     width: 100%;
-    min-width: 300px;
     max-width: 1110px;
     margin: 0 auto;
     padding: 0 10px;
@@ -927,7 +925,7 @@ a.btn {
         display: flex;
         min-height: 145px;
         font-size: 1.13em;
-        line-height: 24px;
+        line-height: 1.33;
 
         align-items: center;
     }
@@ -1207,7 +1205,7 @@ a.btn {
             color: #cbb04c;
         }
         p {
-            line-height: 22px;
+            line-height: 1.6;
             color: #202020;
         }
         .swiper-button-next, .swiper-button-prev {
@@ -1254,7 +1252,7 @@ a.btn {
             display: flex;
             padding-left: 17px;
             font-size: 1.25em;
-            line-height: 26px;
+            line-height: 1.3;
             color: #000000;
             &:not(:last-child) {
                 margin-bottom: 20px;
@@ -1424,6 +1422,7 @@ a.btn {
     }
     img {
         display: block;
+		width: 100%;
         max-width: 100%;
     }
 }
@@ -1697,11 +1696,13 @@ a.btn {
 }
 
 .advantages {
-    display: flex;
     padding: 75px 0 80px;
-
-    justify-content: space-between;
     &__item {
+		&s{
+			display: flex;
+			width: 100%;
+			justify-content: space-between;
+		}
         display: flex;
         flex-direction: column;
         max-width: 300px;
@@ -1835,7 +1836,7 @@ a.btn {
         display: flex;
         overflow: hidden;
         width: 100%;
-        height: 315px;
+        height: auto;
         margin-bottom: 60px;
         cursor: pointer;
 
@@ -2006,7 +2007,7 @@ a.btn {
     display: flex;
     flex-direction: column;
     padding: 70px 80px 80px;
-
+	z-index: 9999;
     align-items: center;
     h3 {
         margin-bottom: 30px;
@@ -2162,7 +2163,7 @@ a.btn {
 			padding-left: 40px;
 			p{
 				margin-left: 0;
-				width: 90%;
+				width: 80%;
 			}
 			>span{
 				width: 100%;
@@ -2268,5 +2269,237 @@ a.btn {
 	}
 }
 @media only screen and (max-width: 670.5px){
-
+	.main__caption{
+		font-size: 3em;
+		line-height: 1.2;
+	}
+	.reason__item{
+		width: 100%;
+	}
+	.objects__item{
+		flex-wrap: wrap;
+	}
+	.objects__left{
+		width: 100%;
+		margin-bottom: 20px;
+	}
+	.objects__right{
+		margin-left: 0;
+	}
+	.objects__item{
+		padding-bottom: 30px;
+	}
+	.about__item{
+		max-width: 100%;
+		width: 100%;
+		&:not(:last-of-type){
+			margin-bottom: 50px;
+		}
+	}
+	.advantages{
+		flex-wrap: wrap;
+		&__item{
+			max-width: 100%;
+			width: 100%;
+			&:not(:last-of-type){
+				margin-bottom: 50px;
+			}
+		}
+	}
+	.audience__item{
+		max-width: 100%;
+		width: 100%;
+	}
+	.algorithm__row{
+		flex-wrap: wrap;
+	}
+	.reviews__col{
+		max-width: 100%;
+		&:first-of-type{
+			margin-bottom: 50px;
+		}
+	}
+	.algorithm__item{
+		max-width: 100%;
+		width: 100%;
+	}
+	.reviews__bottom{
+		flex-wrap: wrap;
+	}
+	.reviews__item{
+		width: 100%;
+	}
+	.contacts #map_canvas{
+		position: static;
+		height: 400px;
+	}
+	.contacts__box{
+		max-width: 100%;
+	}
+	.about .caption{
+		flex-wrap: wrap;
+	}
+	.audience__item{
+		margin-bottom: 0 !important;
+	}
+	.reviews__item{
+		display: block;
+		width: 100%;
+		max-width: 100%;
+	}
+	.reviews__bottom,
+	.audience__items{
+		display: block;
+	}
+}
+@media only screen and (max-width: 530.5px){
+	.b-center{
+		padding-left: 15px;
+		padding-right: 15px;
+	}
+	.main__caption{
+		font-size: 2.5em;
+	}
+	.main__bottom{
+		display: none;
+	}
+	.request form .btn{
+		width: 100%;
+		max-width: 100%;
+	}
+	.work__tab{
+		width: 47%;
+	}
+	.caption b{
+		margin-left: auto;
+		margin-right: auto;
+	}
+	.main{
+		height: auto;
+	}
+	.reason,.guise,.objects,.offers,.request,.calculation,.business,.results,.algorithm,.days,.estimate,.work,.about,.online,.advantages,.audience{
+		padding: 45px 0;
+	}
+	.contacts{
+		padding: 5px 0 45px;
+	}
+	.reviews{
+		padding: 45px 15px;
+	}
+	.btn{
+		height: 65px;
+	}
+	.caption{
+		font-size: 2.1em;
+	}
+	.objects__items{
+		margin-top: 30px;
+	}
+	.objects__item:not(:first-child){
+		margin-top: -1px;
+	}
+	.objects__col--full{
+		margin: 10px 0 15px;
+	}
+	.objects__name{
+		margin-bottom: 15px;
+		font-size: 2em;
+	}
+	.objects__col--full .objects__param{
+		font-size: 2.3em;
+	}
+	.offers__title{
+		font-size: 1.6em;
+	}
+	.offers__items{
+		margin-top: 20px;
+	}
+	.offers__info{
+		padding: 20px;
+	}
+	.offers__name{
+		padding-left: 0;
+		padding-right: 0;
+	}
+	.calculation__items{
+		margin-top: 0;
+	}
+	.calculation .btn{
+		margin-top: 40px;
+	}
+	.algorithm{
+		.caption{
+			margin-bottom: -30px;
+		}
+	}
+	.estimate__form_top{
+		margin-top: 20px;
+	}
+	.estimate button{
+		margin-top: 30px;
+	}
+	.work__left, .work__right{
+		padding: 25px;
+	}
+	.about .caption{
+		margin-bottom: 20px;
+		text-align: center;
+		justify-content: center;
+	}
+	.about__right p:not(:last-child){
+		margin-bottom: 15px;
+	}
+	.online__video{
+		height: 60vw;
+	}
+	.advantages em{
+		margin-top: 10px;
+	}
+	.audience__title{
+		font-size: 1.7em;
+	}
+	.audience__items{
+		margin-top: 30px;
+	}
+	.reviews .caption{
+		margin-bottom: 35px;
+	}
+	.reviews__video{
+		margin-bottom: 20px;
+	}
+	.form-order input{
+		height: 65px;
+	}
+	.popup h3{
+		font-size: 2.4em;
+		text-align: center;
+	}
+	.results__slider{
+		margin-top: 35px;
+	}
+	.offers__image{
+		height: 120px;
+	}
+}
+@media only screen and (max-width: 420.5px){
+	.btn{
+		font-size: 1.3em;
+	}
+	html,body{
+		font-size: 11px;
+	}
+	.popup{
+		padding: 35px 25px;
+	}
+	.lSSlideOuter .lSPager.lSpg>li{
+		padding: 0 3px;
+	}
+}
+@media only screen and (max-width: 370.5px){
+	.btn__ico{
+		display: none;
+	}
+	.guise__beforeafter .text span{
+		font-size: .9em;
+	}
 }
